--- a/client/src/components/HomeComponents/EditorialBorad/EditorialBorad.module.css
+++ b/client/src/components/HomeComponents/EditorialBorad/EditorialBorad.module.css
@@ -7,6 +7,7 @@
 }
 
 .EditorialBoradCards {
+    padding: 20px;
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(3, 1fr);
