--- a/client/src/components/HomeComponents/EditorialBorad/EditorialBorad.module.css
+++ b/client/src/components/HomeComponents/EditorialBorad/EditorialBorad.module.css
@@ -20,3 +20,18 @@
 button:hover{
     background: #ffffff;
 }
+
+
+@media all and (max-width: 880px) {
+
+    .EditorialBoradCards{
+        display: block;
+        padding: 0px;
+        justify-content: space-between;
+        padding-top: 15px;
+    }
+
+    .EditorialBorad{
+        padding: 0px;
+    }
+}
