--- a/client/src/components/ArchiveComponent/ArchiveComponent.module.css
+++ b/client/src/components/ArchiveComponent/ArchiveComponent.module.css
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 480px) {
     .ArchiveComponentCards {
-        padding: 0px;
+        padding: 15px;
     }
 
     .ArchiveComponentCard {
@@ -49,7 +49,8 @@
     }
 
     iframe {
-        height: 400px;
+        height: 480px;
+        padding-top: 10px;
     }
 
     .ArchiveComponentWrapper {
