--- a/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
+++ b/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
@@ -4,7 +4,8 @@
 }
 
 .ContactUsInnerWrapper {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     border: 2px solid #d0d9db;
     border-radius: 20px;
     padding: 35px;
@@ -12,8 +13,7 @@
 
 .ContactUsContactInfo {
     padding: 40px;
-    text-align: left;
-    justify-content: center;
+    padding-left: 30%;
     color: #d0d9db;
 }
 
@@ -26,7 +26,7 @@ a {
 
 }
 
-@media all and (max-width: 880px) {
+@media all and (max-width: 1184px) {
     .ContactUsWrapper {
         background-color: #162123;
         padding: 10px;
@@ -39,7 +39,13 @@ a {
         padding: 35px;
     }
 
+    .ContactUsContactInfo {
+        padding: 0px;
+        padding-left: 0;
+        color: #d0d9db;
+    }
+
     iframe {
-        width: auto;
+        width: 100%;
     }
 }
