--- a/client/src/components/ArchiveComponent/ArchiveComponent.module.css
+++ b/client/src/components/ArchiveComponent/ArchiveComponent.module.css
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: 480px) {
     .ArchiveComponentCards {
-        padding: 15px;
+        /* padding: 15px; */
     }
 
     .ArchiveComponentCard {
