--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 
@@ -19,6 +18,4 @@ h1 {
   font-size: 60px;
 }
 
-@media screen and (max-width: 880px) {
-
-}
+@media screen and (max-width: 880px) {}
