--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -9,8 +9,8 @@
 }
 
 .inner_main_menu ul {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     list-style: none;
     text-align: right;
     padding-left: 200px;
@@ -20,6 +20,8 @@
 .inner_main_menu ul li {
     float: none;
     display: inline-block;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .inner_main_menu ul li:nth-child(1) {
