--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,3 +19,23 @@ h1 {
 }
 
 /* @media screen and (max-width: 880px) {} */
+
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #162123;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #162123;
+}
