--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -11,10 +11,10 @@
 }
 
 .inner_main_menu ul {
-    margin: 0px;
-    padding: 0px;
+    /* margin: 0px; */
+    /* padding: 0px; */
     list-style: none;
-    text-align: right;
+    text-align: center;
     padding-left: 200px;
     padding-right: 200px;
 }
@@ -22,55 +22,32 @@
 .inner_main_menu ul li {
     float: none;
     display: inline-block;
-    padding-left: 30px;
-    padding-right: 30px;
+    /* padding-left: 30px; */
+    /* padding-right: 30px; */
 }
 
 .inner_main_menu ul li:nth-child(1) {
-    margin: 30px;
     float: left;
 }
 
 .inner_main_menu ul li:nth-child(2) {
-    margin: 30px;
     float: left;
 }
 
+
+.inner_main_menu ul li:nth-child(5) {
+    float: right;
+}
+
+.inner_main_menu ul li:nth-child(4) {
+    float: right;
+}
+
+
 .logo_area {
-    position: absolute;
-    left: 50%;
-    margin-left: -200px;
+    /* position: absolute; */
+    /* left: 50%; */
+    /* margin-left: -200px; */
 }
 
-@media screen and (max-width: 880px) {
-    .inner_main_menu ul {
-        margin: auto;
-        padding: auto;
-        list-style: none;
-        text-align: center;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-
-    .inner_main_menu ul li:nth-child(1) {
-        margin: 0px;
-        float: center;
-    }
-
-    .inner_main_menu ul li:nth-child(2) {
-        margin: 0px;
-        float: center;
-    }
-
-    .main_menu {
-        display: inline-block;
-        text-align: center;
-    }
-
-
-    .logo_area {
-        position: unset;
-        margin-left: 0px;
-    }
-}
+@media screen and (max-width: 880px) {}
