--- a/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
+++ b/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
@@ -22,7 +22,9 @@ a {
     color: #d0d9db;
 }
 
-.ContactUsIFrame {}
+.ContactUsIFrame{
+
+}
 
 @media all and (max-width: 1184px) {
     .ContactUsWrapper {
