Revert "nav links update"
This reverts commit a36a97ab044f7a7af5919b287aaf72e5dd8445a0.

--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -11,8 +11,8 @@
 }
 
 .inner_main_menu ul {
-    /* margin: 0px; */
-    /* padding: 0px; */
+    margin: 0px;
+    padding: 0px;
     list-style: none;
     text-align: right;
     padding-left: 200px;
@@ -22,8 +22,8 @@
 .inner_main_menu ul li {
     float: none;
     display: inline-block;
-    /* padding-left: 30px; */
-    /* padding-right: 30px; */
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .inner_main_menu ul li:nth-child(1) {
