--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -24,22 +24,27 @@
     display: inline-block;
     padding-left: 30px;
     padding-right: 30px;
+
+    width: 200px;
+    justify-content: center;
+
+    vertical-align: middle;
 }
 
 .inner_main_menu ul li:nth-child(1) {
     float: left;
+    padding-top: 20px;
 }
 
 .inner_main_menu ul li:nth-child(2) {
     float: left;
+    padding-top: 20px;
+}
+
+.inner_main_menu ul li:nth-child(3) {
+    float: center;
 }
 
 
-.logo_area {
-    position: absolute;
-    left: 50%;
-    margin-left: -200px;
-    top: 5%;
-}
 
 @media screen and (max-width: 880px) {}
