responsive nav to dep

--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -47,4 +47,39 @@
 
 
 
-@media screen and (max-width: 880px) {}
+@media screen and (max-width: 880px) {
+    .main_menu {
+        display: unset;
+    }
+
+    .inner_main_menu ul {
+        margin: 0px;
+        padding: 0px;
+        list-style: center;
+        text-align: center;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .inner_main_menu ul li {
+        float: none;
+        display: inline-block;
+        padding-left: 0px;
+        padding-right: 0px;
+
+        width: 200px;
+        justify-content: center;
+        vertical-align: middle;
+    }
+
+    .inner_main_menu ul li:nth-child(1) {
+        float: none;
+        padding-top: 0px;
+    }
+    
+    .inner_main_menu ul li:nth-child(2) {
+        float: none;
+        padding-top: 0px;
+    }
+    
+}
