--- a/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
+++ b/client/src/components/HomeComponents/ContactsUs/ContactUs.module.css
@@ -11,10 +11,33 @@
     padding: 35px;
 }
 
+.ContactUsIFrame{
+    /* width: 752px; */
+    /* border: 3px solid #d0d9db; */
+    /* box-shadow: 0 0 1px #d0d9db; */
+}
+
 .ContactUsContactInfo {
-    padding: 40px;
-    padding-left: 30%;
+    padding: auto;
+    /* padding-left: 30%; */
     color: #d0d9db;
+}
+
+
+.ContactUsContactInfo table {
+    padding: 20px;
+    color: #d0d9db;
+    border: 2px solid #d0d9db;
+    width: auto;
+    font-size: 26px;
+    border-radius: 30px;
+    justify-content: center;
+    /* box-shadow: 0 4px 8px 0 red, 0 6px 20px 0 red; */
+}
+
+.ContactUsContactInfo table:hover {
+    transition: 0.3s;
+    box-shadow: 0 0 10px #d0d9db;
 }
 
 a {
@@ -45,4 +68,14 @@ a {
     iframe {
         width: 100%;
     }
+
+    .ContactUsContactInfo table {
+        width: auto;
+        font-size: 14px;
+        border-radius: 30px;
+        justify-content: center;
+        /* box-shadow: 0 4px 8px 0 red, 0 6px 20px 0 red; */
+    }
+    
+
 }
