navbar lang switch

--- a/client/src/components/NavigationBar2.0/NavigationBar.module.css
+++ b/client/src/components/NavigationBar2.0/NavigationBar.module.css
@@ -94,5 +94,9 @@
         float: none;
         padding-top: 0px;
     }
-    
+ 
+    .LaguageDiv{
+        font-size: 7vw;
+        top: 10px;
+    }
 }
